[package]
name = "off-chain-workers-template"
version = "0.1.0"
authors = ["yanjunting <lyqingye@wokoworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtle-encoding = "0.5"
anomaly = "0.2.0"
async-trait = "0.1.50"
humantime-serde = "1.0.0"
serde = "1.0.125"
serde_cbor = "0.11.1"
serde_derive = "1.0"
thiserror = "1.0.26"
toml = "0.5"
tracing = "0.1.26"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }
serde_json = { version = "1" }
bytes = "1.0.0"
prost = "0.7"
prost-types = "0.7"
futures = "0.3.14"
crossbeam-channel = "0.5.1"
k256 = { version = "0.9.5", features = ["ecdsa-core", "ecdsa", "sha256"]}
hex = "0.4"
bitcoin = { version = "=0.27", features = ["use-serde"] }
tiny-bip39 = "0.8.0"
hdpath = { version = "0.6.0", features = ["with-bitcoin"] }
sha2 = "0.9.3"
ripemd160 = "0.9.1"
bech32 = "0.8.1"
itertools = "0.10.1"
dyn-clonable = "0.9.0"
tonic = { version = "0.4", features = ["tls", "tls-roots"] }
dirs-next = "2.0.0"
dyn-clone = "1.0.3"
retry = { version = "1.2.1", default-features = false }
async-stream = "0.3.2"
rust_decimal = "1.15"

tracing-subscriber = "0.2.19"
test-env-log = { version = "0.2.7", features = ["trace"] }
env_logger="0.9.0"
log = "0.4"

[dependencies.tendermint]
version = "=0.21.0"

[dependencies.tendermint-rpc]
version = "=0.21.0"
features = ["http-client", "websocket-client"]

[dependencies.tendermint-proto]
version = "=0.21.0"
