[package]
name = "off-chain-workers-template"
version = "0.1.0"
authors = ["yanjunting <lyqingye@wokoworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error
anomaly = "0.2.0"
thiserror = "1.0.26"
# serialize / deserialize
serde = "1.0.125"
serde_cbor = "0.11.1"
serde_derive = "1.0"
serde_json = { version = "1" }
humantime-serde = "1.0.0"
# protobuf
prost = "0.7"
prost-types = "0.7"
# cryto
k256 = { version = "0.9.5", features = ["ecdsa-core", "ecdsa", "sha256"]}
sha2 = "0.9.3"
# hdwallet
bitcoin = { version = "=0.27", features = ["use-serde"] }
hdpath = { version = "0.6.0", features = ["with-bitcoin"] }
tiny-bip39 = "0.8.0"
# async
async-trait = "0.1.50"
async-stream = "0.3.2"
futures = "0.3.14"
crossbeam-channel = "0.5.1"
# network
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }
tonic = { version = "0.4", features = ["tls", "tls-roots"] }
# encode/decode
ripemd160 = "0.9.1"
subtle-encoding = "0.5"
bech32 = "0.8.1"
hex = "0.4"
bytes = "1.0.0"
# file format
toml = "0.5"
# tools
itertools = "0.10.1"
dyn-clonable = "0.9.0"
dyn-clone = "1.0.3"
dirs-next = "2.0.0"
retry = { version = "1.2.1", default-features = false }
# decimal
rust_decimal = "1.15"
# log and tracing
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
test-env-log = { version = "0.2.7", features = ["trace"] }
env_logger="0.9.0"

[dependencies.tendermint]
version = "=0.21.0"

[dependencies.tendermint-rpc]
version = "=0.21.0"
features = ["http-client", "websocket-client"]

[dependencies.tendermint-proto]
version = "=0.21.0"
